Update to version 3.7.1-java21-RC-SNAPSHOT