@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        vXnat = "1.9.2"
+        vXnat = "1.10.0-RC-SNAPSHOT"
         pluginAppName = "XNAT Container Service"
     }
 }
@@ -13,17 +13,19 @@ plugins {
     id "io.spring.dependency-management" version "1.1.7"
     id "io.franzbecker.gradle-lombok" version "5.0.0"
     id "net.linguica.maven-settings" version "0.5"
+    id("org.openrewrite.rewrite") version("7.0.4")
+
 }
 
 group "org.nrg.xnatx.plugins"
-version "3.7.1"
+version "3.7.1-java21-RC-SNAPSHOT"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = 21
+    targetCompatibility = 21
 }
 
-def vMockito = "1.10.19"
+def vMockito = "5.7.0"
 def vJavassist = "3.21.0-GA"
 def vAwaitility = "2.0.0"
 
@@ -38,7 +40,7 @@ dependencyManagement {
     imports {
         mavenBom("org.nrg:parent:${vXnat}") {
             bomProperties([
-                    "mockito.version": vMockito,
+                    // "mockito.version": vMockito,
                     "javassist.version": vJavassist
             ])
         }
@@ -46,9 +48,9 @@ dependencyManagement {
 }
 
 def vDockerJava = "3.4.0.1"
-def vAutoValue = "1.3"
+def vAutoValue = "1.5.4"
 def vKubernetesClient = "15.0.+"
-def vPowerMock = "1.7.0"
+def vPowerMock = "2.0.9"
 def vGson = dependencyManagement.importedProperties["gson.version"]
 def vJackson = dependencyManagement.importedProperties["jackson.version"]
 def vSpringSecurity = dependencyManagement.importedProperties["spring-security.version"]
@@ -64,9 +66,23 @@ configurations {
     }
 }
 
+tasks.withType(Test).configureEach {
+//        jvmArgs("--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.xml/jdk.xml.internal=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
+
+lombok {
+    version = dependencyManagement.importedProperties["lombok.version"] as String
+    sha256 = dependencyManagement.importedProperties["lombok.checksum"] as String
+}
+
 dependencies {
     annotationProcessor "org.nrg:framework"
     annotationProcessor "com.google.auto.value:auto-value:${vAutoValue}"
+
+    rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:3.1.0")
+
 
     compileOnly "com.google.auto.value:auto-value:${vAutoValue}"
 
@@ -178,35 +194,52 @@ dependencies {
     runtimeOnly "com.google.code.findbugs:jsr305"
     runtimeOnly "org.yaml:snakeyaml:1.15+"
 
-    testImplementation "junit:junit"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation(platform('org.junit:junit-bom:5.10.2'))
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation "org.hamcrest:hamcrest-library"
     testImplementation "org.springframework:spring-test"
     testImplementation "org.springframework.security:spring-security-test:${vSpringSecurity}"
     testImplementation "org.springframework.security:spring-security-config"
-    testImplementation "org.mockito:mockito-core"
+    testImplementation "org.mockito:mockito-core:${vMockito}"
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'  // JUnit 5 integration for Mockito
+
     testImplementation "javax.servlet:javax.servlet-api"
     testImplementation "com.h2database:h2"
     testImplementation "org.springframework:spring-jdbc"
     testImplementation "org.springframework:spring-orm"
     testImplementation "org.apache.commons:commons-dbcp2"
     testImplementation "commons-net:commons-net"
-    testImplementation "org.powermock:powermock-module-junit4:${vPowerMock}"
-    testImplementation "org.powermock:powermock-api-mockito:${vPowerMock}"
+//    testImplementation "org.powermock:powermock-module-junit4:${vPowerMock}"
+//    testImplementation "org.powermock:powermock-api-mockito2:${vPowerMock}"
     testImplementation "org.awaitility:awaitility:${vAwaitility}"
     testImplementation "org.testcontainers:junit-jupiter:1.19.0"
     testImplementation "org.testcontainers:postgresql:1.19.0"
 }
 
+rewrite {
+    // activeRecipe("org.openrewrite.java.testing.mockito.Mockito1to5Migration")
+    activeRecipe("org.openrewrite.java.testing.mockito.ReplacePowerMockito")
+
+    setExportDatatables(true)
+}
+
 test {
+    useJUnitPlatform()
     systemProperty "integration", System.getProperty('integration') == "true"
 }
 
 tasks.register ( 'unitTest', Test ) {
+    useJUnitPlatform()
+
     systemProperties['integration'] = "false"
     test
 }
 
 tasks.register ( 'integrationTest', Test ) {
+    useJUnitPlatform()
     systemProperties['integration'] = "true"
     test
 }
@@ -252,7 +285,7 @@ ext.gitManifest = manifest {
 
 task fatJar(type: Jar) {
     zip64 true
-    classifier = "fat"
+    archiveClassifier.set("fat")
     from {
         configurations.implementAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
     } {
@@ -284,7 +317,7 @@ jar{
 }
 
 task sourceJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
+    archiveClassifier.set("sources")
     manifest {
         from gitManifest
     }
@@ -292,7 +325,7 @@ task sourceJar(type: Jar, dependsOn: classes) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = "javadoc"
+    archiveClassifier.set("javadoc")
     manifest {
         from gitManifest
     }
